Fix export IPA command

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -108,11 +108,13 @@ workflows:
             
       - name: Export IPA
         script: |
-          xcode-project build-ipa \
-            --archive $CM_BUILD_DIR/DataPost.xcarchive
+          xcodebuild -exportArchive \
+            -archivePath $CM_BUILD_DIR/DataPost.xcarchive \
+            -exportPath $CM_BUILD_DIR/ipa \
+            -exportOptionsPlist /Users/builder/export_options.plist
     
     artifacts:
-      - build/ios/ipa/*.ipa
+      - $CM_BUILD_DIR/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
       - $CM_BUILD_DIR/DataPost.xcarchive
       
