Add BGTaskSchedulerPermittedIdentifiers for App Store validation

--- a/DataPost/Info.plist
+++ b/DataPost/Info.plist
@@ -61,6 +61,10 @@
 		<string>fetch</string>
 		<string>processing</string>
 	</array>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>org.worldpossible.DataPost.refresh</string>
+	</array>
 	<key>UILaunchScreen</key>
 	<dict>
 		<key>UIColorName</key>
